--- a/Class 1.ipynb
+++ b/Class 1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "27df1209",
    "metadata": {},
    "outputs": [],
@@ -62,8 +62,13 @@
     "    return counter\n",
     "\n",
     "def anagram_sol(string_a, string_b):\n",
-    "    string_a = string_a.lower()\n",
-    "    string_b = string_b.lower()\n",
+    "    \n",
+    "    no_space_a = string_a.replace(' ', '')\n",
+    "    no_space_b = string_b.replace(' ', '')\n",
+    "\n",
+    "    string_a = no_space_a.lower()\n",
+    "    string_b = no_space_b.lower()\n",
+    "\n",
     "    if len(string_a) != len(string_b): # covering the length case.\n",
     "        return False                   # If our strings are of unequal length then 0(1)=constant\n",
     "    char_times_a = dict()              # These dictionaries will track which we've seen\n",
@@ -101,7 +106,7 @@
     }
    ],
    "source": [
-    "anagram_sol(\"Cars Car\", \"SCAR CAR\")"
+    "anagram_sol(\"cars car\", \"SC AR C     AR\")"
    ]
   },
   {
@@ -119,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "id": "842910e4",
    "metadata": {},
    "outputs": [
@@ -129,13 +134,13 @@
        "False"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anagram_sol(\"TomMarvoloRiddle\", \"iamlordvoldemort\")\n"
+    "anagram_sol(\"i am lord voldemort\", \"tom marvolo riddle\")\n"
    ]
   },
   {
